<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/sms_main_1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/start_welcome_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/back_cancel"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_marginLeft="3dp"
            android:clickable="true"
            android:gravity="center"
            android:onClick="back"
            android:text="@string/back"
            android:textColor="#fff"
            android:textSize="19sp" />

        <TextView
            android:id="@+id/shengdian_biaoti"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_gravity="center_horizontal"
            android:drawable="@drawable/textview_down"
            android:layout_centerInParent="true"
            android:text="求生设置"
            android:textColor="#fff"
            android:textSize="21sp" />

        <TextView
            android:id="@+id/edit_selectAll"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="15dp"
            android:clickable="true"
            android:gravity="center"
            android:onClick="edit"
            android:text="@string/edit"
            android:textColor="#fff"
            android:textSize="19sp" />
    </RelativeLayout>

    <View
        android:id="@+id/view1"
        android:layout_width="fill_parent"
        android:layout_height="2px"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/shengdian_biaoti"
        android:background="#BFBFBF" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp" >

        <TextView
            android:id="@+id/sms_main_textView1"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="短信内容设置"
            android:textColor="#fff"
            android:textSize="14sp" />

        <Button
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_marginTop="10dp"
            android:background="@drawable/ic_preference_single_normal"
            android:onClick="preserve"
            android:text="@string/preserve" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical" >

        <!-- android:layout_width="match_parent" -->
        <!-- android:layout_height="wrap_content" -->

        <EditText
            android:id="@+id/id_information"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/ic_preference_single_normal"
            android:editable="false"
            android:lines="3" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp" >

        <TextView
            android:id="@+id/sms_main_textView2"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="紧急联系人设置"
            android:textColor="#fff"
            android:textSize="14sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/id_sendee"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_weight="2.07"
            android:background="@drawable/ic_preference_single_normal"
            android:hint="请输入电话号码"
            android:lines="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:onClick="add_from_text"
            android:phoneNumber="true"
            android:text="@string/add" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="5dp"
            android:onClick="add_from_phone"
            android:text="@string/sendee" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:textColor="#fff"
        android:textSize="22sp" >

        <ListView
            android:id="@+id/call_list_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="15dp" >
        </ListView>

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="vertical"
        android:gravity="bottom">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Button
            android:id="@+id/send_delete"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_above="@+id/sms_tongzhi"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginLeft="30sp"
            android:layout_marginRight="30sp"
            android:background="@drawable/exit_btn"
            android:gravity="center"
            android:onClick="send"
            android:text="@string/send"
            android:textColor="#fff"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/sms_tongzhi"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="为防止被其他软件杀死 请记得把我添加到白名单哦"
            android:textColor="#fff"
            android:textSize="12sp" />
    </RelativeLayout>
    </LinearLayout>
    <!-- <LinearLayout -->
    <!-- android:layout_width="match_parent" -->
    <!-- android:layout_height="wrap_content" -->
    <!-- android:orientation="horizontal"> -->
    <!-- <Button -->
    <!-- android:layout_width="wrap_content" -->
    <!-- android:layout_height="wrap_content" -->
    <!-- android:text="send" -->
    <!-- android:onClick="send"/> -->
    <!-- </LinearLayout> -->

</LinearLayout>